<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    android:backgroundTint="#E4E4E4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title_aj"
                android:textColor="@color/black"
                android:textSize="@dimen/TexrLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jobtitletv1"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/TextSmall"/>
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_aj"
                android:textColor="@color/black"
                android:textSize="@dimen/TexrLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jobfrmname"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/TextSmall"/>
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_aj"
                android:textColor="@color/black"
                android:textSize="@dimen/TexrLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jobfrmage"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/TextSmall"/>
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_aj"
                android:textColor="@color/black"
                android:textSize="@dimen/TexrLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jobfrmaddress"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/TextSmall"/>
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_aj"
                android:textColor="@color/black"
                android:textSize="@dimen/TexrLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jobfrmmble"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/TextSmall"/>
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_aj"
                android:textColor="@color/black"
                android:textSize="@dimen/TexrLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jobfrmemail"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/TextSmall"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jobid"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:visibility="invisible"
                android:textSize="@dimen/TextSmall"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical |center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:gravity="center">

            <Button
                android:id="@+id/apljbedt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/Green"
                android:text="@string/edt_btn_aj"
                android:textColor="#FFE4E4E4"
                android:textSize="@dimen/buttonSize" />

            <Button
                android:id="@+id/apljbdlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:textColor="#FFE4E4E4"
                android:backgroundTint="@color/Red"
                android:text="@string/dlt_btn_aj"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>